syntax = "proto3";

package orderService;

option go_package = "./;bankAccountService";

import "google/protobuf/timestamp.proto";

message Pagination {
  int64 TotalCount = 1;
  int64 TotalPages = 2;
  int64 Page = 3;
  int64 Size = 4;
  bool HasMore = 5;
}

message Payment {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message Balance {
  double amount = 1;
  string currency = 2;
}

message BankAccount {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string address = 5;
  string status = 6;
  Balance balance = 7;
  google.protobuf.Timestamp createdAt = 8;
  google.protobuf.Timestamp updatedAt = 9;
}

message CreateBankAccountRequest {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  string address = 4;
  string status = 5;
  int64 balance = 6;
}

message CreateBankAccountResponse {
  string id = 1;
}

message DepositBalanceRequest {
  string id = 1;
  string paymentId = 2;
  int64 amount = 3;
}

message DepositBalanceResponse {}

message WithdrawBalanceRequest {
  string id = 1;
  string paymentId = 2;
  int64 amount = 3;
}

message WithdrawBalanceResponse {}

message GetByIdRequest {
  string id = 1;
  bool isOwner = 2;
}

message GetByIdResponse {
  BankAccount bankAccount = 1;
}

message ChangeEmailRequest {
  string id = 1;
  string email = 2;
}

message ChangeEmailResponse {}

message SearchBankAccountsRequest {
  string searchText = 1;
  int64 page = 2;
  int64 size = 3;
}

message SearchBankAccountsResponse {
  repeated BankAccount bankAccounts = 1;
  Pagination pagination = 2;
}


service bankAccountService {

  // commands
  rpc CreateBankAccount (CreateBankAccountRequest) returns (CreateBankAccountResponse) {};
  rpc DepositBalance (DepositBalanceRequest) returns (DepositBalanceResponse) {};
  rpc WithdrawBalance (WithdrawBalanceRequest) returns (WithdrawBalanceResponse) {};
  rpc ChangeEmail (ChangeEmailRequest) returns (ChangeEmailResponse) {};

  // queries
  rpc GetById (GetByIdRequest) returns (GetByIdResponse) {};
  rpc SearchBankAccounts (SearchBankAccountsRequest) returns (SearchBankAccountsResponse) {};
}